# ipbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ipbot-pod.sh
certs/: generate-ecc.sh  ssl.conf
conf/: redis.conf
src/: bot.rs  db.rs  main.rs  rest.rs
