[package]
name = "ipbot"
version = "0.1.0"
edition = "2021"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "~0.10"
hex = "~0.4"
log = "~0.4"
env_logger = "~0.10"
redis = { version = "~0.22", features = ["tokio-comp"] }
teloxide = { version = "0.11", features = ["macros"] }
tokio = { version = "~1.23", features = ["rt-multi-thread", "macros", "sync"] }
rand = "~0.8"
warp = { version = "~0.3", features = ["tls"] }
